...
    </plurals>
    <string name="Blue">Blue</string>
    <string name="Both">Both</string>
    <string name="Camera">Camera</string>
    <string name="CameraNoColon">Camera</string>
    <string name="CameraIsInUseConfirmation">Camera is in use. Delete anyway?</string>
    <string name="Cameras">CAMERAS</string>
    <string name="CamerasNoCap">Cameras</string>
    <string name="Cancel">Cancel</string>
    <string name="ChooseApertureRange">Choose aperture range</string>
    <string name="ChooseApertureValue">Choose aperture value</string>
    <string name="ChooseExposureComp">Choose exposure comp</string>
    <string name="ChooseFocalLength">Choose focal length</string>
...
    <string name="DatabaseImported">Database imported successfully</string>
    <string name="Date">Date</string>
    <string name="DateNoColon">Date</string>
    <string name="Daylight">Daylight</string>
    <string name="Decline">Decline</string>
    <string name="DefaultFormat">Default format</string>
    <string name="Delete">Delete</string>
    <string name="DeleteFilmStock">Delete film stock</string>
    <string name="DeleteLabel">Delete label</string>
    <string name="DescriptionOrNote">Description/note</string>
    <string name="DeselectAll">Deselect all</string>
    <string name="Developed">Developed</string>
    <string name="DevelopedOn">Developed on</string>
...
    <string name="FilmType">Film type</string>
    <string name="FilmProcess">Film process</string>
    <string name="FilterFilmStocksBy">Filter film stocks by</string>
    <string name="FilterIsInUseDeleteAnyway">Filter is in use. Delete anyway?</string>
    <string name="FilterNoColon">Filter</string>
    <string name="FilterOrFilters">Filter(s)</string>
    <string name="Filters">FILTERS</string>
    <string name="FiltersNoCap">Filters</string>
    <string name="FixedLens">Fixed lens</string>
    <string name="FixedLensHelp">Setting a fixed lens will change the camera into a fixed-lens camera. The lens will be used by default for all (new) frames added with this camera. This reduces the number of steps when adding new frames and keeps the list of separate lenses to a minimum.\n\nSetting a fixed lens removes and disables other lens links for this camera. You can however define compatibl
    <string name="Flash">Flash</string>
    <string name="Fluorescent">Fluorescent</string>
    <string name="FocalLengthRange">Focal length range (mm)</string>
...
    <string name="From">From</string>
    <string name="FullStop">1 stop</string>
    <string name="GPSNotEnabled">You have location updates enabled in the app\'s settings, but GPS is disabled in system settings.\n\nDo you want to go to system settings to enable GPS?</string>
    <string name="GPSSettings">GPS Settings</string>
    <string name="GPSUpdateSummary">Keep updating the current location using GPS.</string>
    <string name="GPSUpdateTitle">Location updates</string>
    <string name="Gear">Gear</string>
    <string name="General">General</string>
    <string name="GoToSettings">Go to settings</string>
    <string name="Green">Green</string>
    <string name="Grey">Grey</string>
    <string name="HalfStop">½ stop</string>
    <string name="Help">Help</string>
...
    <string name="IsBeingUsed">is being used!</string>
    <string name="Labels">Labels</string>
    <string name="LabelsAdded">Label(s) added</string>
    <string name="LabelsRemoved">Label(s) removed</string>
    <string name="Lens">Lens</string>
    <string name="LensNoColon">Lens</string>
    <string name="Lenses">LENSES</string>
    <string name="LensIsInUseConfirmation">Lens is in use. Delete anyway?</string>
    <string name="LensesNoCap">Lenses</string>
    <string name="License">License</string>
    <string name="Light">Light</string>
    <string name="LightSource">Light source</string>
    <string name="Loaded">Loaded</string>
...
    <string name="NotificationComplementaryPicturesImportSuccessMessage">Pictures imported successfully</string>
    <string name="NotificationComplementaryPicturesImportSuccessTitle">Complementary pictures imported</string>
    <string name="NotificationComplementaryPicturesImportTitle">Importing complementary pictures</string>
    <string name="NoValue">&lt;empty&gt;</string>
    <string name="NoWritePermission">The app needs write permission to external storage to export the .csv file and ExifTool commands.</string>
    <string name="Normal">Normal</string>
    <string name="OK">OK</string>
    <string name="Options">Options</string>
    <string name="Orange">Orange</string>
    <plurals name="PhotosAmount">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>
...
