...
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/NoLenses"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lenses_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        />
...
